--- a/PROJECT_NAME*package.json
+++ b/PROJECT_NAME*package.json
@@ -8,6 +8,7 @@
   "scripts": {},
   "devDependencies": {
     "grunt": "^0.4.4",
+    "grunt-autoprefixer": "^1.0.1",
     "grunt-chmod": "^1.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.12.0",
