--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "generator-atom",
-  "version": "0.1.0",
-  "description": "Ideil atom generator",
+  "name": "generator-ideil-atom",
+  "version": "0.0.3",
+  "description": "Yeoman generator for Ideil Atom",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "ideil/generator-atom",
+  "repository": "ideil/generator-ideil-atom",
   "author": {
-    "name": "",
-    "email": "",
-    "url": "https://github.com/ideil/generator-atom"
+    "name": "phx-vic",
+    "email": "v10@idel.com",
+    "url": "https://github.com/ideil"
   },
   "scripts": {
     "test": "mocha"
@@ -22,7 +22,9 @@
   "dependencies": {
     "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
-    "yosay": "^1.0.2"
+    "yosay": "^1.0.2",
+    "underscore.string": "^3.1.1",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "mocha": "*"
