--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-ideil-atom",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "Yeoman generator for Ideil Atom",
   "license": "MIT",
   "main": "app/index.js",
@@ -24,7 +24,8 @@
     "chalk": "^1.0.0",
     "yosay": "^1.0.2",
     "underscore.string": "^3.1.1",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "fs-extra": "^0.26.2"
   },
   "devDependencies": {
     "mocha": "*"
