add demo modal, nav and link

--- a/generators/app/templates/static/layouts/_includes/__datafile.yml
+++ b/generators/app/templates/static/layouts/_includes/__datafile.yml
@@ -1,1 +1,7 @@
-title: Site Title
+metaTitle: Website Name
+
+pages:
+  - id:       00-home
+    isNav:    true
+    href:     00-home.html
+    navTitle: Home
