--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-ideil-atom",
-  "version": "3.1.2",
+  "version": "3.1.2a",
   "description": "Yeoman generator for Ideil Atom",
   "license": "MIT",
   "main": "app/index.js",
