--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-ideil-atom",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Yeoman generator for Ideil Atom",
   "license": "MIT",
   "main": "app/index.js",
@@ -20,12 +20,12 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
-    "yosay": "^1.0.2",
-    "underscore.string": "^3.1.1",
+    "fs-extra": "^0.26.2",
     "mkdirp": "^0.5.1",
-    "fs-extra": "^0.26.2"
+    "underscore.string": "^3.3.5",
+    "yeoman-generator": "^0.19.0",
+    "yosay": "^1.0.2"
   },
   "devDependencies": {
     "mocha": "*"
